Fixed whitespace in right side
Turns out the problem is I have larger min-width on my h1 than my viewport width which cause this weird issue

--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,10 @@ header {
     align-items: center;
     flex-direction: column;
     border-radius: 20px;
-    margin-bottom: 50px;
 }
 
 nav {
-    height: 50px;
+    height: 2.5em;
     width: 100%;
     background-color: rgb(255, 228, 95);
     border-radius: 0 0 10px 10px;
@@ -25,12 +24,17 @@ nav {
 h1 {
     color: white;
     text-align: center;
-    padding: 35px 0;
-    line-height: 50px;
-    display: inline-block;
-    width: 50%;
-    min-width: 700px;
     font-size: 2.5em;
+    margin: .2em;
+}
+
+h1.intro {
+    margin: 1.2em;
+}
+
+h1.stroke {
+    -webkit-text-stroke: 1px black;
+    font-weight: 700;
 }
 
 main {
